fixed the margin spacing for 1080p monitors

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
     border: 1px solid black;
     border-radius: 50px;
 
-    margin-top: 12vh;
+    margin-top: 2vh;
 }
 
 /*  */
